--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
-.status__name {
-  text-transform: capitalize;
+@font-face {
+  font-family: EightBitMadness;
+  src: url('assets/8-bit-madness.ttf');
 }
 
-.options {
-  margin-bottom: 0.5em;
+body {
+  background-color: #333;
 }
 
-.response {
-  font-family: "Lucida Console", Monaco, monospace;
+.config-btn {
+  position: absolute;
+  right: 0.5rem;
+  top: 0.5rem;
+  z-index: 1;
+  opacity: 0.3;
 }
 
 .scene {
@@ -15,7 +20,7 @@
   width: 100%;
   height: 0;
   padding: 56.25% 0 0 0;
-  background-image: url('animation_bg.svg');
+  background-image: url('assets/animation_bg.svg');
   background-size: contain;
   /* animation: bg-move 0 infinite linear;
   animation-fill-mode: both; */
@@ -42,33 +47,40 @@
   height: 40%;
   width: 167.45vh;
   margin: 0 0;
-  background-image: url('animation-sprite-3.svg');
+  background-image: url('assets/sprites_walk.svg');
   background-position: 80% 0;
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
   bottom: 20%;
-  left: 25%;
+  left: 30%;
 }
 
 .power-bars {
+  color: #eee;
+  font-family: EightBitMadness, 'Lucida Console', Monaco, monospace;
   position: absolute;
-  top: 4vh;
-  left: 4vh;
-  height: 35%;
+  top: 2vmax;
+  left: 2vmax;
   width: 25%;
 }
 
-.power-bar+.power-bar {
-  margin-top: 4vh;
+.power-bars__text {
+  font-size: 2.5vmax;
+  text-transform: uppercase;
 }
 
 .power-bar {
+  font-size: 0.7vmax;
   background-color: #1e2530;
-  border: 1vh solid #101821;
+  border: 1em solid #101821;
+  margin-bottom: 1vmax;
   width: 100%;
-  height: 4vh;
-  box-shadow: 0px -1vh 0px 0px #2d3d4d, 0px 1vh 0px 0px #2d3d4d, 1vh 0px 0px 0px #2d3d4d, -1vh 0px 0px 0px #2d3d4d;
+  height: 4em;
+  box-shadow: 0px -1em 0px 0px #2d3d4d,
+     0px 1em 0px 0px #2d3d4d,
+      1em 0px 0px 0px #2d3d4d,
+      -1em 0px 0px 0px #2d3d4d;
 }
 
 .power-bar__progress {
@@ -76,7 +88,7 @@
   height: 100%;
   background: #82f734;
   background: linear-gradient(to bottom, #2afe2f 0%, #2afe2f 30%, #1cbc21 30%, #1cbc21 100%);
-  transition: all 0.1s steps(2, end);
+  /* transition: all 0.1s steps(2, end); */
 }
 
 .power-bar--yellow .power-bar__progress {
