--- a/styles.css
+++ b/styles.css
@@ -20,19 +20,11 @@ body {
   width: 100%;
   height: 0;
   padding: 56.25% 0 0 0;
-  background-image: url('assets/animation_bg.svg');
+  background-image: url('assets/animation_clouds.svg');
+  background-image: url('assets/animation_clouds.svg'),
+    linear-gradient(to bottom, #4b63ff 0%, #4b63ff 79%, #333333 79%, #333333 100%);
   background-size: contain;
-  /* animation: bg-move 0 infinite linear;
-  animation-fill-mode: both; */
 }
-
-/* .scene--standing {
-  animation-duration: 400s;
-}
-
-.scene--walking {
-  animation-duration: 30s;
-} */
 
 @keyframes bg-move {
   from {
@@ -47,8 +39,9 @@ body {
   height: 40%;
   width: 167.45vh;
   margin: 0 0;
+  /* background-image: url('assets/animationsprite_walk.svg'); */
   background-image: url('assets/sprites_walk.svg');
-  background-position: 80% 0;
+  background-position: 57.14% 0;
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
@@ -68,6 +61,11 @@ body {
 .power-bars__text {
   font-size: 2.5vmax;
   text-transform: uppercase;
+  text-shadow:
+    -0.15vmax -0.15vmax 0 #2d3d4d,
+    0.15vmax -0.15vmax 0 #2d3d4d,
+    -0.15vmax 0.15vmax 0 #2d3d4d,
+    0.15vmax 0.15vmax 0 #2d3d4d;
 }
 
 .power-bar {
@@ -88,7 +86,6 @@ body {
   height: 100%;
   background: #82f734;
   background: linear-gradient(to bottom, #2afe2f 0%, #2afe2f 30%, #1cbc21 30%, #1cbc21 100%);
-  /* transition: all 0.1s steps(2, end); */
 }
 
 .power-bar--yellow .power-bar__progress {
